--- a/index.css
+++ b/index.css
@@ -2,17 +2,22 @@
     height: 50%;
     width: 100%;
     box-sizing: border-box;
-    border-top: 10px solid white
+    border-top: 5px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px
 }
 .menu{
     width: 25%; 
     height: 100%; 
-    background: black
+    background: white
 }
 #mapContainer{
     height:100%; 
     width:50%; 
-    border: 10px solid white; 
+    border: 10px solid black; 
     overflow: hidden; 
     background-color: black; 
     position: relative; 
