--- a/index.css
+++ b/index.css
@@ -1,18 +1,39 @@
 .tabFolder{
     height: 50%;
     width: 100%;
+    background-color: white;
     box-sizing: border-box;
     border-top: 5px solid black;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px
+    opacity: 0;
+    transition: opacity 1s;
 }
 .menu{
     width: 25%; 
     height: 100%; 
-    background: white
+    background: black;
+}
+.button{
+    font-size: 32px;
+    border-radius: 7px;
+    border: 2px solid black;
+    padding-left: 3px;
+    padding-right: 3px;
+    box-shadow: 3px 3px gray;
+    transition: all .05s;
+    cursor: pointer;
+    user-select: none;
+}
+.button:active{
+    box-shadow: 1px 1px gray;
+    margin-left: 2px;
+    margin-right: -2px;
+    margin-top: 2px;
+    margin-bottom: -2px;
 }
 #mapContainer{
     height:100%; 
@@ -22,4 +43,31 @@
     background-color: black; 
     position: relative; 
     box-sizing: border-box
+}
+#saves{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+#prompts{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#prompt{
+    font-size: 24px;
+    border: 2px solid black;
+    border-radius: 7px;
+    padding-left: 3px;
+    padding-right: 3px;
+}
+#map{
+    position: absolute;
+    opacity: 0;
+    transition: opacity 1s;
 }
